[rs-microservice] Sonar